2009-06-23  Andrew Overholt  <overholt@redhat.com>
	* build.xml: Remove unused targets.